[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/controllers/tools/brush_tool_controller.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/controllers/tools/eraser_tool_controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/controllers/control_net_configs.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/controllers/lineart_controller.gd" type="Script" id=4]
[ext_resource path="res://ui/components/smart_option_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/components/config_checkbox.gd" type="Script" id=6]
[ext_resource path="res://ui/controllers/tools/transform_selection_tool_controller.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/components/v_gradient.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/controllers/tools/flip_tool_controller.tscn" type="PackedScene" id=9]

[node name="LineartController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Container" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Configs" type="HBoxContainer" parent="Container"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlNetConfigs" parent="Container/Configs" instance=ExtResource( 3 )]
margin_right = 510.0
margin_bottom = 600.0

[node name="InvertColors" type="CheckBox" parent="Container/Configs/ControlNetConfigs"]
margin_top = 132.0
margin_right = 510.0
margin_bottom = 160.0
text = "INVERT_COLORS"
script = ExtResource( 6 )
flag_name_const = "FLAG_LINEART_INVERT_COLORS"

[node name="LineartTypeBasic" parent="Container/Configs/ControlNetConfigs" groups=["minimalist_ui"] instance=ExtResource( 5 )]
margin_top = 164.0
margin_right = 510.0
margin_bottom = 190.0
text = "LINEART_TYPE"
requieres_flag = false

[node name="LineartTypeAdvanced" parent="Container/Configs/ControlNetConfigs" groups=["advanced_ui"] instance=ExtResource( 5 )]
margin_top = 194.0
margin_right = 510.0
margin_bottom = 220.0
text = "LINEART_TYPE"
flag_name_const = "FLAG_LINEART_TYPE"

[node name="ToolControllers" type="VBoxContainer" parent="Container/Configs"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BrushToolController" parent="Container/Configs/ToolControllers" instance=ExtResource( 1 )]
visible = false
margin_right = 125.0
margin_bottom = 188.0
default_color = Color( 1, 1, 1, 1 )
allow_change_color = false
is_greyscale = true
invert_greyscale = true

[node name="EraserToolController" parent="Container/Configs/ToolControllers" instance=ExtResource( 2 )]
visible = false
margin_right = 125.0
margin_bottom = 36.0

[node name="TransformSelectionTool" parent="Container/Configs/ToolControllers" instance=ExtResource( 7 )]
visible = false
margin_right = 360.0
margin_bottom = 112.0

[node name="FlipTool" parent="Container/Configs/ToolControllers" instance=ExtResource( 9 )]
visible = false
margin_right = 510.0
margin_bottom = 26.0

[node name="TopGradient" parent="." instance=ExtResource( 8 )]
flip_v = true

[node name="BottomGradient" parent="." instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[connection signal="toggled" from="Container/Configs/ControlNetConfigs/InvertColors" to="." method="_on_InvertColors_toggled"]
[connection signal="option_selected" from="Container/Configs/ControlNetConfigs/LineartTypeBasic" to="." method="_on_LineartTypeBasic_option_selected"]
[connection signal="option_selected" from="Container/Configs/ControlNetConfigs/LineartTypeAdvanced" to="." method="_on_LineartTypeAdvanced_option_selected"]
